# cncsvision

./: .dockerignore  CMakeLists.txt  Dockerfile  License.txt  README.md
experiments/: CMakeLists.txt
experiments/activevision/: CMakeLists.txt
experiments/calibrations/: CMakeLists.txt  LatestCalibration.h  fullCalibratorMotors.cpp  pureCalibration.cpp  screenMirrorCalibrator.cpp
experiments/demos/: CMakeLists.txt  demoBuddha.cpp  demoBuddha2.cpp  demoBuddhaFixed.cpp  demoBuddhaFixed2.cpp  demoFace.cpp  demoPhotocameraActivePassive.cpp  dragonAttached.cpp
experiments/eyegaze/: CMakeLists.txt  plotGaze.cpp  testEyeFollower.cpp  testEyeFollowerGL.cpp
experiments/glfw_prototypes/: CMakeLists.txt  README_timings.txt  glfw_framerate_optotrak_test.cpp  glfw_framerate_test.cpp
experiments/haptic/: CMakeLists.txt
experiments/other/: CMakeLists.txt  dataReader.cpp
experiments/texturing/: CMakeLists.txt  README.txt  expSynopter.cpp  expSynopterOptotrak.cpp  expTexturingCylinderAdjustment.cpp  expTexturingCylinderDiscrimination.cpp  expTexturingCylinderDiscriminationRandomDots.cpp  expTexturingParabolicCylinderAdjustment.cpp  expTexturingParabolicCylinderDiscrimination.cpp  expTexturingParaboloidAdjustment.cpp  expTexturingParaboloidDiscrimination.cpp  floor_noise.frag  floor_noise.vert  potato_perlin_deformed.frag  potato_perlin_deformed.vert
experimentsbrown/: BrownFtdi.cpp  BrownFtdi.h  BrownMotorFunctionsSim.cpp  BrownMotorFunctionsSim.h  BrownPhidgets.cpp  BrownPhidgets.h  BrownPhidgetsSim.cpp  BrownPhidgetsSim.h  CMakeLists.txt  CylinderPointsStimulusBrown.cpp  CylinderPointsStimulusBrown.h  Optotrak2Sim.cpp  Optotrak2Sim.h  Test.h  TrapezoidPointsStimulus.cpp  TrapezoidPointsStimulus.h  load_obj_defaults.h
experimentsbrown/Brown_tests/: CMakeLists.txt  gltools.h  matrix_functions.h  phidgets_installation.txt  testBrown1.cpp  testBrown2.cpp  testBrown3.cpp  testBrown4.cpp  testBrown4a.cpp  testBrown5.cpp  testReinsertion.cpp  test_nico.cpp  testfall15-3Dcues-parabCylinder_grasp-size.cpp  testfall15-3Dcues-parabCylinder_grasp-texture.cpp  testfall15-3Dcues-parabCylinder_grasp.cpp  testfall15-3Dcues-parabCylinder_mse-size.cpp  testfall15-3Dcues-parabCylinder_mse-texture.cpp  testfall15-3Dcues-parabCylinder_mse.cpp  testfall15-3Dcues-paraboloid_adjustment.cpp  testfall15-3Dcues-paraboloid_grasp.cpp  testfall15-3Dcues-paraboloid_mse.cpp  testfall15-3Dcues-wedges_adjustment-ss.cpp  testfall15-3Dcues-wedges_adjustment.cpp  testfall15-3Dcues-wedges_grasp.cpp  testfall15-3Dcues-wedges_mse.cpp  testfall15-3Dcues-wedges_simultaneous.cpp  testfall15-3Dcues-wedges_thetaStaircase.cpp  testfall15-realObj_wedges.cpp  testfall15-realObj_wedges_adjustment.cpp  testspring15-SMT.cpp  testspring15-armlength-adj.cpp  testspring15-armlength-grasp.cpp  testspring15-armlength-graspWtraining.cpp  testspring15-phidgets.cpp  testspring15-phidgets2.cpp  testspring15-phidgets3.cpp  testspring15-phidgets4.cpp  testspring15-texture4.cpp  testspring15-texture5.cpp  testspring16-karl-muller2.cpp  (+44 more)
experimentsbrown/OptotrakToolbox-2011-May-10/: ChangeLog  README.txt  VERSION.txt  determineOptotrakSystem.m  make_all.m  optoUtil.c  optoUtil.h  sample5.c  sample5.m  sample5_convert.m  sample5_runall.m  sample5_withbreak.m  sample7.m
experimentsbrown/ShapeConstancy/: CMakeLists.txt  ExpAmanda.cpp  ExpAmanda2.cpp  ExpHugo.cpp  ExpHugo2.0.cpp  ExpHugo30.cpp  ExpOct2012blindRtG.cpp  ExpOct2012grasp2.0.cpp  ExpOct2012grasp3.0.cpp  ExpOct2012grasp4.0.cpp  ExpOct2012offplace.cpp  ExpOct2012offplace2.0.cpp  ExpOct2012reachtograsp2.0.cpp  RtGblind.cpp  ShapeOrientation.cpp  ShapeOrientationVR.cpp  ShapeOrientationVR2.cpp  ShapeOrientationVR3.cpp  ShapeSizeConstancy3Depths1.2mouse.cpp  ShapeSizeConstancy3Depths1.3keyb.cpp  ShapeSizeConstancy3DepthsEllipsoidTest.cpp  ShapeSizeConstancy3DepthsTraining.cpp  ShapeSizeConstancyRtG-allplaces.cpp  ShapeSizeConstancyRtG-offplace-training.cpp  ShapeSizeConstancyRtG-offplace.cpp  ShapeSizeConstancyRtG-onplace.cpp  ShapeSizeConstancyRtG1.1.cpp  ShapeSizeConstancyRtGtraining.cpp  fall13-expAmandaOneInch-x.cpp.cpp  fall13-expAmandaOneInch.cpp - Copy.cpp  fall13-expClaireHandOcclusion.cpp  fall13-expClaireHandOcclusionTraining.cpp  fall13-expClaireHandOcclusionTrial.cpp  fall13-staircasePointing.cpp  fall13-staircasePointingtraining.cpp  fall14-ernst_banks_test_1.1.cpp  fall14-ernst_banks_test_1.1_VH.cpp  fall14-ernst_banks_test_1.cpp  fall14-ernst_banks_test_1_VH.cpp  fall14-evan-haptic.cpp  (+68 more)
experimentsbrown/calibrations/: CMakeLists.txt  Calibration_017A.h  LatestCalibration.h  fullCalibratorBrown.cpp  pureCalibrationBrown.cpp  screenMirrorCalibratorBrown.cpp  testRandomization.cpp
experimentsbrown/parameters/: parameters-evan-haptic.txt  parametersAmandaOneInch-x.txt  parametersClaireHandOcclusion.txt  parametersClaireHandOcclusionTraining.txt  parametersClaireHandOcclusionTraining14.txt  parametersClaireHandOcclusionTrial14.txt  parametersClaireHandOcclusionTrialClosedLoop.txt  parametersClaireHandOcclusionTrialFall14.txt  parametersClairePonzo.txt  parametersEvanHaptic.txt  parametersEvanHaptic2.txt  parametersEvanTabletop.txt  parametersSizeWeightIllusion.txt  parameters_fall14ErnstBanks_test1.txt  parameterspointPerceive_adjustment.txt  parameterspointPerceive_pointing.txt  parametersstaircaseAdjustment.txt  parametersstaircaseAdjustment2.txt  parametersstaircaseComparison.txt  parametersstaircaseComparison2.txt  parametersstaircaseComparison3.txt  parametersstaircasePointing.txt  parametersstaircasePointing2.txt  parametersstaircasePointingMixC.txt  parametersstereopsisTest.txt
experimentstrieste/: CMakeLists.txt
experimentstrieste/activevision/: CMakeLists.txt
experimentstrieste/calibrations/: CMakeLists.txt  LatestCalibrationTrieste.h  README.txt  fullCalibratorTS.cpp  pureCalibrationTS.cpp  screenMirrorCalibratorTS.cpp
experimentstrieste/demos/: CMakeLists.txt  demoBuddha2TS.cpp  demoBuddhaFixed2TS.cpp
src/: CMakeLists.txt
src/QT/: CMakeLists.txt
src/communications/: ALPProjector.cpp  ALPProjector.h  AsyncSerial.cpp  AsyncSerial.h  CMakeLists.txt  (+37 more)
(+718 files in other folders)
