if(COMPILE_OPTOTRAK)
add_executable(demoBuddha demoBuddha.cpp)
add_executable(demoBuddha2 demoBuddha2.cpp)
add_executable(demoFace demoFace.cpp)
add_executable(dragonAttached dragonAttached.cpp)
add_executable(demoBuddhaFixed2 demoBuddhaFixed2.cpp)
add_executable(demoBuddhaFixed demoBuddhaFixed.cpp)
add_executable(demoPhotocameraActivePassive demoPhotocameraActivePassive.cpp)

target_link_libraries(demoBuddha Core Experiment GLViz Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(demoBuddha2 Core Experiment GLViz Optotrak Communication  ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(demoFace Core Experiment GLViz Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(dragonAttached Core Experiment GLViz Optotrak Communication ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(demoBuddhaFixed Core Experiment GLViz Communication Optotrak ${GL_LIBS} ${Boost_LIBRARIES})

target_link_libraries(demoBuddhaFixed2 Core Experiment GLViz Communication Optotrak ${GL_LIBS} ${Boost_LIBRARIES})
target_link_libraries(demoPhotocameraActivePassive Core Experiment GLViz Optotrak Communication  ${GL_LIBS} ${Boost_LIBRARIES})
endif(COMPILE_OPTOTRAK)
